EN-001-setting-site-template

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>BookCrossing</title>
   </head>
   <body>
     <h1>BookCrossing</h1>
